tests/functional/lang/eval-fail-derivationStrict-3.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-3.nix:1:1:
            1| builtins.derivationStrict { name = 1; }
             | ^
            2|

       … while evaluating the derivation attribute 'name'
         at /pwd/lang/eval-fail-derivationStrict-3.nix:1:29:
            1| builtins.derivationStrict { name = 1; }
             |                             ^
            2|

       … while evaluating the `name` attribute passed to builtins.derivationStrict

       error: expected a string but found an integer: 1
